<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/linear_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_similar"
        android:padding="16dp">


        <ImageView
            android:id="@+id/image_all"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/ic_all_inclusive"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/image_happy"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/ic_happy_face"
            app:tint="@color/black" />

        <ImageView
            android:id="@+id/image_sunny"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/ic_sun"
            app:tint="@color/black" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_menu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/cabin"
        android:text="@string/hello"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_phrases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/cabin"
        android:text="@string/phrases"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <View
        android:layout_width="180dp"
        android:layout_height="3dp"
        android:layout_below="@+id/text_phrases"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@color/purple_similar" />

    <Button
        android:id="@+id/button_new_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="@color/purple_similar"
        android:fontFamily="@font/cabin"
        android:paddingHorizontal="40dp"
        android:text="@string/newPhrases" />

</RelativeLayout>